sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:13: error: not found: value j
    echange(i,j)
              ^